--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,32 @@
 <resources>
+
+    <!-- Activity Titles -->
     <string name="app_name">Just In Time</string>
-    <string name="action_settings">Settings</string>
-    <string name="class_name_hint">Class Name</string>
-    <string name="no_class">No class Added Yet!</string>
-    <string name="add_location">Add Location</string>
-    <string name="title_activity_edit_view">Edit</string>
+    <string name="title_activity_edit_view">Class Details</string>
     <string name="title_activity_add_new_class">Add New Class</string>
+
+    <string name="no_class">No class Added Yet!</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- Add a new class related strings -->
+    <string name="class_name_hint">Class Name</string>
+    <string name="add_location">Add Location</string>
+
+    <string name="pick_day">Pick a Day</string>
+
+    <!-- Location permission related strings -->
     <string name="location_permission_denied">Application requires location permission to enable the \'current location\' feature. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt;.</string>
     <string name="permission_required_toast">Location permission is required for this application to work</string>
     <string name="permission_rationale_location">Access to the location service is required to use the \'current location\' feature, which shows your current location on the map.</string>
+
+    <!-- Days array -->
+    <string-array name="days_array">
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+    </string-array>
 </resources>
