--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,13 @@
     <string name="permission_required_toast">Location permission is required for this application to work</string>
     <string name="permission_rationale_location">Access to the location service is required to use the \'current location\' feature, which shows your current location on the map.</string>
 
+    <string name="no_location_detected">
+        No location detected. Make sure location is enabled on the device.
+    </string>
+    <string name="add_address">Add Location</string>
+
+    <string name="save">SAVE</string>
+
     <!-- Days array -->
     <string-array name="days_array">
         <item>Sunday</item>
@@ -29,4 +36,16 @@
         <item>Friday</item>
         <item>Saturday</item>
     </string-array>
+
+    <!-- string needed to get address from geo Location -->
+    <string name="no_geocoder_available">No geocoder available</string>
+
+    <string name="fetch_address">Fetch address</string>
+
+    <string name="address_found">Address found</string>
+
+    <string name="no_address_found">Sorry, no address found</string>
+    <string name="no_location_data_provided">No location data provided</string>
+    <string name="service_not_available">Sorry, the service is not available</string>
+    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
 </resources>
